--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS-practical</title>
-</head>
-<body>
-    <script src="./index.js" type="module"></script> 
-</body>
+  </head>
+  <body>
+    <button class="js-button">
+      Это кнопка
+      <span role="image" aria-label="Иконка волшебника">🧙‍♂️</span>
+    </button>
+    <script src="./index.js" type="module"></script>
+  </body>
 </html>
